<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solar Kalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="regija">Regija</string>
    <string name="tip_panela">Tip panela:</string><string-array name="vrsta_panela">
        <item>Monokristalni silicij</item>
        <item>Polikristalni silicij</item>
        <item>Amorfni silicij</item>
    </string-array>
	<string-array name="orijentacija">
        <item>0°  (Jug)</item>
        <item>45° (Jugozapad)</item>
        <item>90° (Zapad)</item>
        <item>-45°(Jugoistok) </item>
        <item>-90°(Istok) </item>
    </string-array>
    <string name="snaga_panela">Snaga panela:</string>
    <string name="kut_nagiba">Kut nagiba:</string>
    <string name="proizvodnja">Godišnja proizvodnja el. energije:</string>
    <string name="snaga">kW</string>
    <string name="izracunaj">Izračunaj</string>
    <string name="orijentacija_krova">Orijentacija krova:</string>
    <string name="activity_karta">Karta</string>
    <string name="stupnjevi">°</string>
    <string name="nula">0</string>
    <string name="trideset_pet">35</string>
    <string name="title_activity_karta">Karta</string>
    <string name="panel">Tip panela:</string>
</resources>
